[package]
name = "simplex"
description = "A Linear Programming solver"
version = "0.9.0"
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
edition = "2018"
readme = "README.md"
categories = ["algorithms", "mathematics"]
keywords = ["simplex", "linear-programming"]
license = "EUPL-1.2"

[dependencies]
ndarray = "0.13.1"
