[package]
name = "simplex"
description = "A Linear Programming solver"
version = "1.0.0"
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
edition = "2018"
readme = "README.md"
categories = ["algorithms", "mathematics"]
keywords = ["simplex", "linear-programming"]
license = "EUPL-1.2"
repository = "https://github.com/aarroyoc/princeps"

[dependencies]
ndarray = "0.13.1"
